CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

# 项目概览
PROJECT(CVRC)
SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_BUILD_TYPE RELEASE)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DPATH=\"\\\"${PROJECT_SOURCE_DIR}\\\"\"")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D${CMAKE_SYSTEM_NAME}")
SET(BIN_NAME "run")




# 找到需要的包
# FIND_PACKAGE(Eigen3 REQUIRED)
FIND_PACKAGE(OpenCV  REQUIRED)
FIND_PACKAGE(Threads)


# 设置头文件包含
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)



# 设置所有代码库
FILE(GLOB_RECURSE sourcefiles "detection/src/*.cpp" )

# FILE(GLOB_RECURSE sourcefiles "./detection/src/detection.cpp")


ADD_EXECUTABLE(${BIN_NAME} main.cpp ${sourcefiles})

TARGET_LINK_LIBRARIES(${BIN_NAME} ${CMAKE_THREAD_LIBS_INIT})
TARGET_LINK_LIBRARIES(${BIN_NAME} ${OpenCV_LIBS})
