CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

# 项目概览
PROJECT(CVRC LANGUAGES CXX)
SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

SET(CMAKE_BUILD_TYPE RELEASE)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DPATH=\"\\\"${PROJECT_SOURCE_DIR}\\\"\"")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D${CMAKE_SYSTEM_NAME}")

SET(BIN_NAME "run")
SET(ONNX_RUNTIME_PATH "/usr/local")


# target_link_directories(YOLO_CXX PUBLIC
#     "${ONNX_RUNTIME_PATH}/lib")
# target_link_libraries(YOLO_CXX PUBLIC
#     ${OpenCV_LIBS}
#     "onnxruntime")


# 找到需要的包
# FIND_PACKAGE(Eigen3 REQUIRED)
FIND_PACKAGE(OpenCV  REQUIRED)
FIND_PACKAGE(Threads REQUIRED)
# FIND_PACKAGE(onnxruntime)
FIND_PACKAGE(fmt REQUIRED)
find_package(Python REQUIRED COMPONENTS Development Interpreter)
FIND_PACKAGE(pybind11 REQUIRED)


# 设置头文件包含
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
# INCLUDE_DIRECTORIES("/usr/local/include/onnxruntime/core/session")
INCLUDE_DIRECTORIES("/usr/include/python3.10")
include_directories(${Python_INCLUDE_DIRS})
include_directories(${pybind11_INCLUDE_DIRS})

# 设置所有代码库
FILE(GLOB_RECURSE sourcefiles "detection/src/*.cpp" "control/*.cpp")



ADD_EXECUTABLE(${BIN_NAME} main.cpp ${sourcefiles})


TARGET_LINK_LIBRARIES(${BIN_NAME} ${CMAKE_THREAD_LIBS_INIT})
TARGET_LINK_LIBRARIES(${BIN_NAME} ${OpenCV_LIBS})
TARGET_LINK_LIBRARIES(${BIN_NAME} "onnxruntime")
TARGET_LINK_LIBRARIES(${BIN_NAME} Python::Python)
TARGET_LINK_LIBRARIES(${BIN_NAME} pybind11::pybind11)
TARGET_LINK_LIBRARIES(${BIN_NAME} fmt::fmt)
# TARGET_LINK_LIBRARIES(${BIN_NAME} "${ONNXRUNTIME_DIR}/lib/libonnxruntime.so")

TARGET_LINK_DIRECTORIES(${BIN_NAME} PUBLIC "${ONNX_RUNTIME_PATH}/lib")


